# mcp-distill

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
src/mcp_distill/: __init__.py  decorator.py  projector.py
tests/: test_decorator.py  test_projector.py
