[project]
name = "mcp-distill"
version = "0.1.0"
description = "Field projection layer for MCP tools - reduce LLM context window usage"
readme = "README.md"
authors = [
    { name = "shoegazerstella", email = "mstella.tavella@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "fastmcp", "llm", "context-window", "field-projection", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.2.4",
]

[project.optional-dependencies]
fastmcp = ["fastmcp>=2.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Repository = "https://github.com/shoegazerstella/mcp-distill"
Issues = "https://github.com/shoegazerstella/mcp-distill/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_distill"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
